Blender 2.80 collada (dae) error #65576

Closed
opened 2019-06-06 19:28:09 +02:00 by Kent Davis · 6 comments

System Information
Operating system: Darwin-18.6.0-x86_64-i386-64bit 64 Bits
Graphics card: AMD Radeon Pro 575 OpenGL Engine ATI Technologies Inc. 4.1 ATI-2.9.26

Blender Version
Broken: version: 2.80 (sub 74), branch: blender2.7, commit date: 2019-06-06 09:06, hash: 3325b19ee7
Worked: (optional)

June 5, 2019
They did not deeply inspect everything to preview for Macintosh.
Please to fix make sure everything good.
2 Texture, 3 texture and red is miss.
Screen Shot 2019-06-06 at 10.26.21 AM.png
Blender 2_80 Collada dae June 6 2019.zip
https://youtu.be/wl6kHctqelI

**System Information** Operating system: Darwin-18.6.0-x86_64-i386-64bit 64 Bits Graphics card: AMD Radeon Pro 575 OpenGL Engine ATI Technologies Inc. 4.1 ATI-2.9.26 **Blender Version** Broken: version: 2.80 (sub 74), branch: blender2.7, commit date: 2019-06-06 09:06, hash: `3325b19ee7` Worked: (optional) June 5, 2019 They did not deeply inspect everything to preview for Macintosh. Please to fix make sure everything good. 2 Texture, 3 texture and red is miss. ![Screen Shot 2019-06-06 at 10.26.21 AM.png](https://archive.blender.org/developer/F7090511/Screen_Shot_2019-06-06_at_10.26.21_AM.png) [Blender 2_80 Collada dae June 6 2019.zip](https://archive.blender.org/developer/F7090510/Blender_2_80_Collada_dae_June_6_2019.zip) https://youtu.be/wl6kHctqelI
Author

Added subscriber: @Kent-Davis

Added subscriber: @Kent-Davis
Author

Added subscriber: @GaiaClary

Added subscriber: @GaiaClary
Author

Last download daily build June 10, 2019 Blender 2.80 beta
@GaiaClary
I can notice they did change and still error.
Screen Shot 2019-06-10 at 6.57.11 PM.png

Last download daily build June 10, 2019 Blender 2.80 beta @GaiaClary I can notice they did change and still error. ![Screen Shot 2019-06-10 at 6.57.11 PM.png](https://archive.blender.org/developer/F7097965/Screen_Shot_2019-06-10_at_6.57.11_PM.png)

This issue was referenced by 4419dd3bfd

This issue was referenced by 4419dd3bfd00906f9f0f174f083d3490c27b01f8
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Hi, Kent;
Thanks for reporting.

The Collada exporter added unnecessary extra shader nodes. Because of those extra nodes the exporter then got confused and did not see the images of some materials.

Here is what you need to do:

  • update blender after this fix gets into the next daily build (tomorrow)
  • cleanup the materials by removing the extra nodes (shader nodes)

try to export again. Now all materials should be exported as expected.

cheers,
Gaia

Hi, Kent; Thanks for reporting. The Collada exporter added unnecessary extra shader nodes. Because of those extra nodes the exporter then got confused and did not see the images of some materials. Here is what you need to do: - update blender after this fix gets into the next daily build (tomorrow) - cleanup the materials by removing the extra nodes (shader nodes) # try to export again. Now all materials should be exported as expected. cheers, Gaia
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65576
No description provided.