fix T65576 collada exporter duplicates node tree when exported material already uses nodes